<resources>
    <string name="app_name">AppNotas</string>
    <string name="minhas_notas">Minhas Notas</string>
    <string name="procurar_notas">Procurar Notas</string>
    <string name="title_activity_create_notes">CreateNotesActivity</string>
    <string name="title_note">Título da Nota</string>
    <string name="subtitle_note">Subtítulo</string>
    <string name="type_note_here">Digite sua nota...</string>
    <string name="miscellaneous">Detalhes</string>
    <string name="add_image">Adicionar Imagem</string>
    <string name="add_url">Adicione um link</string>
    <string name="enter_url">Digite o link</string>
    <string name="add">Adicione</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="delete_note">Delete a Nota</string>
    <string name="check_delete_note">Você tem certeza que deseja excluir esta nota?</string>
</resources>