<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        android:tint="@color/colorWhite"
        tools:ignore="UseAppTint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl"/>

    <EditText
        android:id="@+id/inputURl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:textColor="@color/colorWhite"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/colorTextHint"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"/>

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:padding="8sp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURl"
        />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel_dialog"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputURl"/>

</androidx.constraintlayout.widget.ConstraintLayout>