<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">
    
    <ImageView
        android:id="@+id/ImageDeleteNote"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ImageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ImageDeleteNote"/>
    
    <TextView
        android:id="@+id/textDeleteNoteMassage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/check_delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/ImageDeleteNote"/>

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginBottom="8dp"
        android:fontFamily="casual"
        android:padding="8dp"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMassage"/>
    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginBottom="8dp"
        android:fontFamily="casual"
        android:padding="8dp"
        android:includeFontPadding="false"
        android:text="@string/cancel_dialog"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMassage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>