<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/minhas_notas"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_serch"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            android:tint="@color/colorSearchIcon"
            tools:ignore="UseAppTint" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:background="@null"
            android:fontFamily="casual"
            android:hint="@string/procurar_notas"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="13sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_outline"
            app:tint="@color/colorIcons"/>

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons"/>
        <ImageView
            android:id="@+id/imageAddWeblink"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons"/>

    </LinearLayout>
    
    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        app:tint="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>