<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseAppTint" />

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                tools:ignore="UseAppTint" />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:fontFamily="casual"
                android:hint="@string/title_note"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                tools:layout_editor_absoluteX="12dp" />
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:fontFamily="casual"
                android:hint="@string/subtitle_note"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubtitileIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime" />

            <View
                android:id="@+id/viewSubtitileIndicator"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle" />

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote"/>

            <ImageView
                android:id="@+id/imageRemove"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorWhite"
                android:visibility="gone"
                tools:ignore="UseAppTint"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"/>

            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote">
                
                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="casual"
                    android:includeFontPadding="false"
                    android:textSize="13sp"
                    />
                
                <ImageView
                    android:id="@+id/imageRemoveWebURL"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/colorDelete"
                    tools:ignore="UseAppTint" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:fontFamily="casual"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="100sp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"
                />


      </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>